massive refactor with factory pattern

--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 layout: default
 ---
 <div class="wrapper">
-  <svg viewBox="0 0 499 499" class="svg">
+  <div id="svgWrapper"></div>
+  <!-- <svg viewBox="0 0 499 499" class="svg">
     <defs>
       <marker id="arrow" markerWidth="13" markerHeight="13" refX="1" refY="2"
          orient="auto">
@@ -10,5 +11,5 @@ layout: default
   </marker>
     </defs>
     <g class="gee"></g>
-  </svg>
+  </svg> -->
 </div>
