--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 layout: default
 ---
 <div class="wrapper">
+  <button type="button" class="sample" onclick="tc.sample(); location.reload();">Sample schema</button>
   <div id="svgWrapper"></div>
   <!-- <svg viewBox="0 0 499 499" class="svg">
     <defs>
